# SMILES2Image

./: .editorconfig  .gitignore  LICENSE  MANIFEST.in  QUICK_START.md  README.md  pyproject.toml  requirements.txt  setup.py
examples/: basic_usage.py  batch_processing.py  dataset_generation.py  gui_integration.py  requirements.txt  web_api_integration.py
smiles_to_image/: __init__.py  cli.py  converter.py
tests/: test_converter.py
