[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smiles-to-image"
version = "0.1.1"
authors = [
    {name = "tsiyukino"}
]
description = "Convert SMILES chemical notation to molecular structure images"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["smiles", "chemistry", "molecular", "structure", "cheminformatics", "rdkit"]
dependencies = [
    "rdkit>=2023.9.1",
    "pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/tsiyukino/SMILES2Image"
"Bug Reports" = "https://github.com/tsiyukino/SMILES2Image/issues"
"Source Code" = "https://github.com/tsiyukino/SMILES2Image"

[project.scripts]
smiles2img = "smiles_to_image.cli:main"
